--- a/historia-conceitos/index.htm
+++ b/historia-conceitos/index.htm
@@ -8,6 +8,9 @@
 </head>
 <body>
     
-
+    <!--Externar script-->
+    <!--Carregar o script ao final do body-->
+    <script src="tipagem-fraca.js"></script>    
+    <script src="tipagem-dinamica.js"></script> 
 </body>
 </html>
