--- a/historia-conceitos/index.htm
+++ b/historia-conceitos/index.htm
@@ -10,7 +10,7 @@
     
     <!--Externar script-->
     <!--Carregar o script ao final do body-->
-    <script src="tipagem-fraca.js">fraca</script>    
+    <script src="tipagem-fraca.js"></script>    
     <script src="tipagem-dinamica.js"></script> 
 </body>
 </html>
